--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "helmet": "^5.0.1"
   }
 }
