--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/config": "^0.0.41",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.7",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
@@ -21,7 +26,18 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.7",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "express": "^4.17.2",
-    "helmet": "^5.0.1"
+    "helmet": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.1.6",
+    "nanoid": "^3.1.32",
+    "pino": "^7.6.3",
+    "pino-pretty": "^7.3.0",
+    "zod": "^3.11.6"
   }
 }
