--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
+    "dotenv": "^12.0.4",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
